--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-aiofiles==24.1.0
-httpx==0.28.1
-nest_asyncio==1.5.8
-openai==1.88.0
-orjson==3.10.18
-python-dotenv==1.1.0
-Requests==2.32.4
-tqdm==4.66.5
-websockets==15.0.1
+groq==0.36.0
+pandas==2.3.3
+pydantic==2.12.5
+python-dotenv==1.2.1
+python_dateutil==2.8.2
+pytrends==4.9.2
+Requests==2.32.5
+streamlit==1.36.0
 twikit==2.3.3
-pytrends
-streamlit
-pandas
+
+aiofiles==24.1.0
+nest_asyncio==1.5.8
+orjson==3.10.18
